--- a/src/Styles/client.scss
+++ b/src/Styles/client.scss
@@ -8,7 +8,11 @@
         h3{
             font-size: x-large;
             font-weight: bold;
-
         }
+    }
+
+    &__table{
+        background-color: white;
+        overflow-x: scroll;
     }
 }
