se añadio barra de botones

--- a/src/Styles/cardproyectos.scss
+++ b/src/Styles/cardproyectos.scss
@@ -48,3 +48,17 @@
     
     
 }
+
+@media (max-width: 60rem){
+    .cards{
+        padding: 0;
+    }
+
+    .card__proyectos{    
+
+        &__container{
+            width: 260px;
+        }
+    
+    }
+}
