se añade componente de cliente

--- a/src/Styles/client.scss
+++ b/src/Styles/client.scss
@@ -2,6 +2,7 @@
     &__container{
         padding: 1.25rem;
         margin: 10px;
+        min-height: 100vh;
     }
 
     &__header{
@@ -9,10 +10,137 @@
             font-size: x-large;
             font-weight: bold;
         }
+
+        button{
+            position: relative;
+            top: -7em;
+            border: var(--esmeralda) 1px solid;
+            padding: 0.25rem 0.65rem;
+            border-radius: 4px;
+            cursor: pointer;
+
+            &:hover{
+                background-color: var(--esmeralda);
+                color: white;
+            }
+
+        }
+
+        section{
+            background-color: white;
+            box-shadow: var(--shadow);
+            margin-bottom: 10px;
+            padding: 0.65rem;
+            font-size: large;
+        }
+
+        span{
+            display: flex;
+            flex-direction: row;
+        }
+
+        p:last-of-type{
+            font-weight: bold;
+            margin: 0 10px;
+        }
     }
 
     &__table{
+        padding: 0.25rem;
+        overflow-x: auto;
+        cursor: pointer;
         background-color: white;
-        overflow-x: scroll;
+    }
+}
+
+// CLIENTE VIEW
+.cliente__App{
+
+    &__header{
+        
+        button{
+            position: relative;
+            top: -5rem;
+            border: var(--esmeralda) 1px solid;
+            padding: 0.25rem 0.65rem;
+            border-radius: 4px;
+            cursor: pointer;
+
+            &:hover{
+                background-color: var(--esmeralda);
+                color: white;
+            }
+
+        }
+    }
+
+
+    &__container{
+        padding: 1.25rem;
+        
+    }
+
+    &__body{
+        h3{
+            font-size: large;
+            font-weight: bold;
+            text-align: center;
+        }
+        button{  
+
+            display: inline-flex;
+            justify-content: center;
+            border: none;
+            background-color: var(--esmeralda);
+            color: white;
+            width: 100%;
+            font-size: 1rem;
+            cursor: pointer;
+        }
+        div{
+            overflow-x: auto;
+        }
+    }
+
+    &__pagos{
+        p:last-of-type{
+            display: inline-flex;
+            justify-content: center;
+            color: white;
+            font-size: 1rem;
+            width: 100%;
+            background-color: var(--esmeralda);
+            
+        }
+    }
+}
+
+@media (max-width:60rem){
+    .proyecto{
+
+        &__container{
+            padding: 0;
+        }
+
+        &__header{
+
+            section{
+                text-align: center;
+            }
+
+            span{
+                display: flex;
+                flex-direction: column;
+            }
+
+            p:first-of-type{
+                margin: 0;
+            }
+
+            p:last-of-type{
+                margin: 0 0 10px 0;
+            }
+         
+        }
     }
 }
