--- a/src/Styles/client.scss
+++ b/src/Styles/client.scss
@@ -3,12 +3,29 @@
         padding: 1.25rem;
         margin: 10px;
         min-height: 100vh;
+        position: relative;
+    }
+
+    &__header__title{
+        position: relative;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        width: 100%;
+        height: 15rem;
+        padding: 0.65rem;
+        // background-color: var(--esmeralda);
+        background-image: linear-gradient(60deg, #96deda 0%, #50c9c3 100%);
+
     }
 
     &__header{
         h3{
-            font-size: x-large;
+            font-size: xx-large;
             font-weight: bold;
+            color: white;
+            text-transform: uppercase;
+
         }
 
         button{
