--- a/src/Styles/tablas.scss
+++ b/src/Styles/tablas.scss
@@ -1,19 +1,70 @@
-table{
-  width: 100%;
-  overflow-x: hidden;
-  background-color: white;
+.proyecto__table{
+  
   padding: 0;
-  margin: 0;
+  margin-top: 2rem;
+
+  td,th{
+    padding: 0.65rem;
+    height: 49px;
+  }
+
+
+  table{
+    width: 100%;
+    overflow-x: hidden;
+    background-color: white;
+    padding: 0;
+    margin: 0;
+  }
+  
+  td{
+    text-transform: uppercase;
+  }
+
 }
 
-td{
-  text-transform: uppercase;
+.proyecto__input{
+  padding: 8px;
+  box-shadow: var(--shadow);
+
+  input,
+  button{
+    border: 0;
+    padding: 0.65rem;
+  };
+
+  input{
+    width: 16rem;
+  }
+
+  button{
+    background-color: var(--esmeralda);
+    color: #ffff;
+    width: 4rem;
+    cursor: pointer;
+
+    &:hover{
+      opacity: 0.75;
+    }
+  }
 }
 
 .tabla__data{
   width: 100%;
   text-align: center;
+
+  &__pendding{
+    color: var(--rojo);
+    font-weight: bold;
+  }
+  
+  &__pagado{
+    color: var(--esmeralda);
+    font-weight: bold;
+  }
+
 }
+
 
 .tabla__data td {
   padding: 4px;
@@ -23,19 +74,26 @@ td{
   background-color: #dbdfe2;
 }
 
-.tabla__data:hover{
-  background-color: var(--esmeralda);
-  color: white;
-}
+// .tabla__data:hover{
+//   background-color: var(--esmeralda_light);
+//   color: white;
+// }
 
 .head__data__table{
   background-color: var(--esmeralda);
+  font-size: medium;
   color: white;
 }
 
+.cliente__App__pagos{
+  margin: 4rem;
+}
+
 @media (max-width:60rem){
-  table{
-    width: 100vh;
+  
+  .proyecto__table table{
+    width: 850px;
     overflow-x: auto;
   }
+
 }
