--- a/src/Styles/index.scss
+++ b/src/Styles/index.scss
@@ -70,8 +70,6 @@ code {
       border-radius: 4px;
       margin: 4px;
       width: 12rem;
-      box-shadow: var(--shadow);
-
     }
 
     
@@ -94,4 +92,51 @@ code {
     }
 }
 
+.notification{
+
+  height: 5rem;
+  position: relative;
+
+ span{
+  position: absolute;
+  text-align: center;
+  top: 10px;
+  right: 0;
+  height: 3rem;
+  width: 15rem;
+  border-radius: 4px;
+  color: white;
+  padding: 10px;
+ }
+
+ &__error{
+  background-color: var(--rojo);
+ }
+
+ &__success{
+  background-color: var(--esmeralda);
+ }
+
+}
+
+.bg__danger{
+  text-align: center;
+  font-size: large;
+  padding: 10px;
+  
+  button{
+    border: 0;
+    padding: 0.55rem;
+    width: 120px;
+    color: white;
+    border-radius: 4px;
+    background-color: var(--rojo);
+    cursor: pointer;
+
+    &:hover{
+      opacity: 0.70;
+    }
+  }
+
+}
 
