tags de tipo, nuevos elemenos para liquidar pago

--- a/src/Styles/index.scss
+++ b/src/Styles/index.scss
@@ -123,6 +123,8 @@ code {
   text-align: center;
   font-size: large;
   padding: 10px;
+  color: var(--rojo);
+  font-weight: bold;
   
   button{
     border: 0;
