--- a/src/Styles/clientedata.scss
+++ b/src/Styles/clientedata.scss
@@ -9,7 +9,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  height: 100px;
+  height: 140px;
   background-image: linear-gradient(60deg, #96deda 0%, #50c9c3 100%);
   text-align: center;
 
@@ -87,4 +87,11 @@
       border-radius: 4px;
     }
     
+}
+
+@media (max-width: 60rem){
+  .cliente__App__container{
+    margin: 0;
+    padding: 4px;
+  }
 }
