--- a/src/Styles/icons.scss
+++ b/src/Styles/icons.scss
@@ -7,14 +7,20 @@
     width: 56px;
     height: 56px;
     bottom: 0;
-    right: 0;
+    top: 10px;
+    right: 10px;
     cursor: pointer;
 
-    &::after{
+    &::before{
       content: url('../assets/icons/user-plus.svg');
-      width: 86px;
-      height: 86px;
+    }
 
+    &::after{
+      content: "Nuevo Cliente";
+      font-weight: normal;
+      color: white;
+      font-size: small;
+      text-align: center;
     }
 
     &:hover{
@@ -42,18 +48,21 @@
 .invoice__ico{
   content: "";
   position: absolute;
-  width: 56px;
+  width: 60px;
   height: 56px;
   bottom: 0;
   right: 0;
   top: 0;
   cursor: pointer;
 
-  &::after{
+  &::before{
     content: url('../assets/icons/invoice.svg');
     width: 86px;
     height: 86px;
+  }
 
+  small{
+    color: white;
   }
 
   &:hover{
