--- a/src/Styles/tablas.scss
+++ b/src/Styles/tablas.scss
@@ -24,17 +24,21 @@
 }
 
 .proyecto__input{
-  padding: 8px;
-  box-shadow: var(--shadow);
-
+  display: flex;
+  width: 100%;
+  padding: 0 0.65rem;
+  
   input,
   button{
     border: 0;
-    padding: 0.65rem;
+    margin: 0;
+    border-radius: 0;
   };
 
   input{
-    width: 16rem;
+    width: 100%;
+    padding-left: 0.65rem;
+    font-size: large;
   }
 
   button{
