--- a/src/Styles/header.scss
+++ b/src/Styles/header.scss
@@ -1,24 +1,28 @@
 .App{
-    width: 100%;
+    height: 100vh;
+    overflow-y: hidden;
 }
 
 .App-header{
-
     display: flex;
-    justify-content: center;
+    justify-content: space-between;
     width: 100%;
     height: 5rem;
     background-color: #34495e;
-    padding: 0.25rem;
-    box-shadow: var(--shadow);
+    padding: 0.25rem 0.65rem;    
+}
 
-    div{
+.App-header span{
         display: block;
         width: auto;
         height: 100%;
         content: url("../assets/img/logo_blanco.png");
         background-position: center;
         background-repeat: no-repeat;
-    }
-    
+}
+
+.App-container{
+    height: 100%;
+    overflow-y: scroll;
+    padding-bottom: 150px;
 }
