--- a/src/Styles/index.scss
+++ b/src/Styles/index.scss
@@ -12,7 +12,6 @@
 
 body {
   background-color: var(--background);
-  overflow-x: hidden;
   margin: 0;
   font-family: var(--normalFont), -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
@@ -24,6 +23,11 @@ body {
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+
+.container__primary{
+  overflow-y: scroll;
+  height: 100%;
 }
 
 #Dashboard{
