--- a/src/Styles/modales.scss
+++ b/src/Styles/modales.scss
@@ -225,6 +225,32 @@
 
 }
 
+.modal__remove__user{
+  width: 100%;
+  display: flex;
+  justify-content: space-around;
+
+  input{
+    font-size: large;
+    width: 80%;
+    padding: 0.25rem 0.65rem;
+    border: 1px solid var(--esmeralda_light);
+
+    &:focus{
+      background-color: var(--rojo);
+      color: white;
+    }
+  }
+
+  button{
+    width: 100px;
+    border: none;
+    background-color: var(--rojo);
+    color: white;
+  }
+
+}
+
 .modal__search__users{
   width: 100%;
 
@@ -240,11 +266,12 @@
   }
 
   tbody tr:nth-child(2n+2){
-    background-color: var(--esmeralda_light);
+    background-color: var(--esmeralda);
+    color: white;
   }
 
   tbody tr{
-    border-bottom: 1px solid var(--black);
+    border-bottom: 1px solid var(--esmeralda_light);
   }
 
   button{
@@ -261,14 +288,41 @@
 
 }
 
-.modal__user__existente{
+.modal__user__existente{ 
+  margin-bottom: 10px;
+
+  label{
+    width: 100%;
+    display: inline-flex;
+    align-items: center;
+    border: 1px solid var(--esmeralda_light);
+    height: fit-content;
+  }
+
+  button{
+    display: inline-flex;
+    height: fit-content;
+    background-color: var(--esmeralda);
+    padding: 0.65rem;
+    border: none;
+    
+    &::before{
+      content: url('../assets/icons/search-alt.svg');
+      width: 1rem;
+      height: 1rem;
+      margin: 0.20rem;
+    }
+
+  }
+
   input{
     width: 100%;
     border: none;
-    box-shadow: var(--shadow);
-    padding: 0.65rem;
-    margin: 10px 0;
+    padding: 0.65rem;    
   }
+
+
+
 }
 
 .tabla__edo__pagos{
