--- a/src/Styles/tablas.scss
+++ b/src/Styles/tablas.scss
@@ -57,6 +57,19 @@
   width: 100%;
   text-align: center;
 
+  button{
+    background-color: var(--esmeralda);
+    border: none;
+    padding: 0.50rem;
+    color: white;
+    border-radius: 4px;
+    cursor: pointer;
+
+    &:hover{
+      opacity: 0.65;
+    }
+  }
+
   &__pendding{
     color: var(--rojo);
     font-weight: bold;
